@@ -69,6 +69,8 @@ class fitsidi_tests(unittest.TestCase):
         fits.set_stokes(['xx'])
         fits.set_frequency(data['freq'])
         fits.set_geometry(data['site'], data['antennas'])
+        fits.add_comment('This is a comment')
+        fits.add_history('This is history')
         fits.add_data_set(testTime, 6.0, data['bl'], data['vis'])
         fits.write()
 
@@ -78,7 +80,10 @@ class fitsidi_tests(unittest.TestCase):
         extNames = [hdu.name for hdu in hdulist]
         for ext in ['ARRAY_GEOMETRY', 'FREQUENCY', 'ANTENNA', 'BANDPASS', 'SOURCE', 'UV_DATA']:
             self.assertTrue(ext in extNames)
-
+        # Check the comments and history
+        self.assertEqual(str(hdulist[0].header['COMMENT']), 'This is a comment')
+        self.assertEqual(str(hdulist[0].header['HISTORY']), 'This is history')
+        
         hdulist.close()
         
     def test_writer_errors(self):
