@@ -64,6 +64,8 @@ class sdfits_tests(unittest.TestCase):
         fits = sdfits.Sd(testFile, ref_time=testTime)
         fits.set_stokes(['xx'])
         fits.set_frequency(data['freq'])
+        fits.add_comment('This is a comment')
+        fits.add_history('This is history')
         fits.add_data_set(testTime, 6.0, data['antennas'], data['spec'])
         fits.write()
 
@@ -73,7 +75,10 @@ class sdfits_tests(unittest.TestCase):
         extNames = [hdu.name for hdu in hdulist]
         for ext in ['SINGLE DISH',]:
             self.assertTrue(ext in extNames)
-
+        # Check the comments and history
+        self.assertEqual(str(hdulist[0].header['COMMENT']), 'This is a comment')
+        self.assertEqual(str(hdulist[0].header['HISTORY']), 'This is history')
+        
         hdulist.close()
     
     def test_data(self):
